applications/media-experimental/base/livrarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: livrarr
  labels:
    app: livrarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8789
      targetPort: http
      protocol: TCP
  selector:
    app: livrarr
