applications/media-experimental/base/livrarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: livrarr
  labels:
    app: livrarr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/instance: "main"
    gethomepage.dev/name: "Livrarr"
    gethomepage.dev/description: "Books *arr (alpha)"
    gethomepage.dev/group: "Book Automation (Exp)"
    gethomepage.dev/weight: "23"
    gethomepage.dev/icon: "book.png"
    gethomepage.dev/href: "http://livrarr.${CLUSTER_DOMAIN}"
    gethomepage.dev/siteMonitor: "http://livrarr.media-experimental.svc.cluster.local:8789"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`livrarr.${CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: livrarr
          port: 8789
